--- a/notes/templates/notes/note_form.html
+++ b/notes/templates/notes/note_form.html
@@ -2,13 +2,17 @@
 {% load crispy_forms_tags %}
 {%block content%}
 <div class="container">
-    <!--distinguish between update or create view-->
-    <!--http://stackoverflow.com/questions/18806703/within-a-template-distinguish-between-create-and-update-form-->
-    {%if object%}
-        <h1>Update {{object.title}}</h1>
-    {%else%}
-        <h1>Create a New Note</h1>
-    {%endif%}
-    {% crispy form %}
+    <div class="row">
+        <div class="col-md-6">
+            <!--distinguish between update or create view-->
+            <!--http://stackoverflow.com/questions/18806703/within-a-template-distinguish-between-create-and-update-form-->
+            {%if object%}
+                <h1>Update {{object.title}}</h1>
+            {%else%}
+                <h1>Create a New Note</h1>
+            {%endif%}
+            {% crispy form %}
+        </div>
+    </div>
 </div>
 {%endblock%}
