correct url error on form submission

--- a/notes/templates/notes/base.html
+++ b/notes/templates/notes/base.html
@@ -60,7 +60,7 @@
             
             $.ajax({
                 type: "POST",
-                url: "/",
+                url: "/add/",
                 dataType: "json",
                 data: {
                     "title": $("#" + formid + " #id_title").val(),
@@ -92,7 +92,7 @@
             
             $.ajax({
                 type: "POST",
-                url: "/",
+                url: "/add/",
                 dataType: "json",
                 data: {
                     "title": $("#" + formid + " #id_title").val(),
@@ -124,7 +124,7 @@
     
             $.ajax({
                 type: "POST",
-                url: "/",
+                url: "/add/",
                 dataType: "json",
                 data: {
                      "title": $("#" + formid + " #id_title").val(),
