--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -22,6 +22,7 @@
                 <button type="submit" class="btn btn-primary">
                    Submit  {% bootstrap_icon "log-in" %} 
                 </button>
+                <a href="https://final-project-ikhon123-2.c9.io/accounts/register" class="btn btn-info" role="button">Sign Up!</a>
             {% endbuttons %}
           </form>
         </div>
