--- a/accounts/templates/accounts/register.html
+++ b/accounts/templates/accounts/register.html
@@ -24,5 +24,6 @@
       </form>
     </div>
 </div>
+<a href="https://final-project-ikhon123-2.c9.io/accounts/login" class="btn btn-info" role="button">Login</a>
 {% endblock %}
   
