--- a/notes/static/notes/style.css
+++ b/notes/static/notes/style.css
@@ -16,9 +16,10 @@ h1,h2,h3,h4,h5,h6
 	margin: 0 0 .5em;
 	font-weight: 500;
 	line-height: 1.1;
+	color:black;
 }
 
-h1 { font-size: 2.25em; } /* 36px */
+h1 { font-size: 2.25em; color:white;} /* 36px */
 h2 { font-size: 1.75em; } /* 28px */
 h3 { font-size: 1.375em;color:black; } /* 22px */
 h4 { font-size: 1.125em;color:black; } /* 18px */
@@ -29,6 +30,7 @@ p
 {
 	margin: 0 0 1.5em;
 	line-height: 1.5;
+	color:black;
 }
 
 blockquote
@@ -266,12 +268,13 @@ Wide styles
 textarea  { 
 	display: inline;
 	text-align:center;
-	padding-top:30px;
+	padding-top:35px;
 	min-width:100px;
 	min-height:100px;   
 	max-width:100px;
 	max-height:100px;
-	font:15px 'Comic Sans MS', cursive; 
+	font:15px 'Comic Sans MS', cursive;
+	color:black;
 	line-height:1.5;
 	background: -webkit-linear-gradient(#F9EFAF, #F7E98D);
 	background: -moz-linear-gradient(#F9EFAF, #F7E98D);
